<resources>
    <string name="app_name">HighQualityAudio</string>

    <!-- Channel list -->
    <string name="channel_list_title">Chat Rooms</string>

    <string-array name="channel_titles">
        <item>VoiceDemo1</item>
        <item>VoiceDemo2</item>
        <item>VoiceDemo3</item>
        <item>VoiceDemo4</item>
        <item>VoiceDemo5</item>
    </string-array>

    <!-- Chat room -->
    <string name="room_user_hint">User\u00A0</string>
    <string name="room_message_edit_hint">Let\'s\u00A0 say \u00A0 something.</string>
    <string name="user_joined_hint">User joined</string>
    <string name="seat_taken">Seat %d is already taken</string>
    <string name="warn_user_has_taken_a_seat">You have already taken seat %d</string>
    <string name="i_can_speak">You can speak now</string>
    <string name="i_left_seat">You left the seat</string>
    <string name="other_joined">User %d has taken a seat</string>
    <string name="other_left_seat">User %d has left a seat</string>

    <string name="beautify_voice">Beautify Voice</string>
    <string name="voice_effect">Voice Effect</string>
    <string name="voice_changer">Voice Changer</string>
    <string name="ai_ns">ANC</string>

    <string name="chat_beautify_voice">Chat</string>
    <string name="sing_beautify_voice">Sing</string>
    <string name="tone_change">Timbre</string>

    <string name="space_voice_effect">Space</string>
    <string name="change_voice_effect">Changer</string>
    <string name="qufeng_voice_effect">QuFeng</string>
    <string name="electric_voice_effect">Electric</string>
    <string name="magic_voice_effect">Magic</string>

    <string-array name="chat_beatify_voice_items">
        <item>MAGNETIC(M)</item>
        <item>FRESH(F)</item>
        <item>VITALITY(F)</item>
    </string-array>

    <string-array name="sing_beatify_voice_items">
    </string-array>

    <string-array name="timbre_beatify_voice_items">
        <item>VIGOROUS</item>
        <item>DEEP</item>
        <item>MELLOW</item>
        <item>FALSETTO</item>
        <item>FULL</item>
        <item>CLEAR</item>
        <item>RESOUNDING</item>
        <item>RINGING</item>
    </string-array>

    <string-array name="space_voice_effect_items">
        <item>KTV</item>
        <item>KTV(ENH)</item>
        <item>CONCERT</item>
        <item>CONCERT(ENH)</item>
        <item>STUDIO</item>
        <item>STUDIO(ENH)</item>
        <item>PHONOGRAPH</item>
        <item>STEREO</item>
        <item>SPACIAL</item>
        <item>ETHEREAL</item>
    </string-array>

    <string-array name="change_voice_effect_items">
        <item>UNCLE</item>
        <item>SISTER</item>
        <item>OLDMAN</item>
        <item>BABYBOY</item>
        <item>BABYGILR</item>
        <item>ZHUBAJIE</item>
        <item>HULK</item>
    </string-array>

    <string-array name="qufeng_voice_effect_items">
        <item>R&amp;B</item>
        <item>R&amp;B(ENH)</item>
        <item>POPULAR</item>
        <item>POPULAR(ENH)</item>
    </string-array>

    <string name="noise_reduce_arch">Arch</string>

    <string-array name="noise_reduce_arch_items">
        <item>Default</item>
        <item>AI</item>
<!--        <item>Default+AI</item>-->
<!--        <item>AI+Default</item>-->
    </string-array>

    <string name="noise_reduce_level">Reduce Level</string>

    <!-- Setting dialog -->
    <string name="setting_dialog_title">Room Settings</string>
    <string name="setting_dialog_leave_room">Leave Room</string>
    <string name="setting_dialog_confirm">Confirm</string>
    <string name="setting_dialog_cancel">Cancel</string>
</resources>
